# probability

./: Cargo.toml  LICENSE  README.md
.github/workflows/: push-pr.yml
src/: account.rs  app_state.rs  bookie.rs  control.rs  flipper.rs  main.rs  money.rs  opposite.rs  predictor.rs  runner.rs  stats.rs
src/flipper/: account.rs  app.rs  app_state.rs  bet.rs  better.rs  csv.rs  io.rs  mod.rs  predictor.rs  runner.rs  stats.rs
src/flipper/predictors/: control.rs  flipper.rs  mod.rs  money.rs  opposite.rs
src/predictors/: control.rs  flipper.rs  money.rs  opposite.rs
