[package]
name = "probability"
version = "0.1.1"
edition = "2021"
publish = false # can't believe this isn't default https://github.com/rust-lang/cargo/issues/6153

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
csv = "1.2"
clap = {version="4.2", features=["derive"]}
